[package]
name = "image-rs"
version = "0.1.0"
authors = ["livstyle"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", features = ["default"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
